--- a/about.html
+++ b/about.html
@@ -35,7 +35,7 @@
                 <p>Before this role, I worked on the Labor and Employment team at NERA Economic Consulting. My work focused on corporate litigation involving allegations of monopsonistic behavior, discrimination, and employee misclassification. This experience introduced me to the unique ways labor markets deviate from theoretical models and the economic analysis required to detect such deviations.</p>
                 <p>Academically, I graduated with honors from Grinnell College in 2022, majoring with honors in Economics and Biochemistry. As an undergraduate, I was awarded the Founders’ Merit Scholarship and the Gilbert DeBartolo ’69 Memorial Prize in Economics.</p>
                 <p>Outside of research, I enjoy playing chess, golfing, and reading—I am part of two book clubs. In my free time, I also enjoy watching football and scuba diving.</p>
-                <a href="Attachments/Neel_Lal_Resume.pdf" class="resume-button" download>Download My Resume</a>
+                <a href="Attachments/Resume Lal.pdf" class="resume-button" download>Download My Resume</a>
             </div>
             <div class="about-photo">
                 <img src="Attachments/profile_photo_about_me.jpg" alt="Profile Photo">
