--- a/research.html
+++ b/research.html
@@ -35,7 +35,7 @@
             <div class="paper-box">
                 <div class="paper-title">A Tale of Two Policies: Alcohol Restrictions and Public Safety</div>
                 <div class="paper-buttons">
-                    <a href="https://drive.google.com/file/d/1ArkbkjJPYJFl8CLFxpQpEXVpnBcTjgnT/view?usp=sharing" target="_blank">Paper</a>
+                    <a href="Attachments/Alcohol_Restrictions_and_Public_Safety.pdf" target="_blank">Paper</a>
                 </div>
             </div>
             <div class="paper-box">
