Add SEO optimization

--- a/research.html
+++ b/research.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+<script src="https://analytics.ahrefs.com/analytics.js" data-key="7FkmTwplIq9q1QGZ60NI8A" defer="true"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Research | Neel Lal</title>
