add .pdf to research brief

--- a/research.html
+++ b/research.html
@@ -44,7 +44,7 @@
                 <div class="paper-authors">(With Jacob Goldin, Tatiana Homonoff, Ithai Lurie, and Katherine Michelmore), NBER Working Paper Series. No. 32343.</div>
                 <div class="paper-buttons">
                     <a href="https://www.nber.org/papers/w32343" target="_blank">Paper</a>
-                    <a href="Attachments/Child-Tax-Benefits-and-Labor-Supply" target="_blank">BFI Research Brief</a>
+                    <a href="Attachments/Child-Tax-Benefits-and-Labor-Supply.pdf" target="_blank">BFI Research Brief</a>
                 </div>
             </div>
         </div>
