Update post UMD

--- a/index.html
+++ b/index.html
@@ -43,15 +43,15 @@
                      <div class="research-subtitle">
                          <h2>Welcome!</h2>
                      </div>  
-                        <p>My name is Neel, a Predoctoral Research Specialist at the University of Chicago’s Coase-Sandor Institute for Law and Economics. My research spans diverse topics, including tax credits, alcohol restrictions, and power outages. This work has resulted in a working paper presented at the NBER Summer Institute and an article forthcoming in the American Law and Economics Review. In the future, I aim to explore critical questions related to monopsonies, discrimination, and anti-poverty policies.</p>
+                        <p>My name is Neel, and I am a first-year doctoral student at the University of Maryland. My research spans topics in public and labor economics, including tax credits, alcohol restrictions, and power outages. This work has resulted in an article accepted in the American Law and Economic Review and a revise-and-resubmit at the Review of Economics and Statistics. Looking ahead, I plan to study questions related to monopsony power, discrimination, and anti-poverty policies.</p>
                     </div>
                 <div class="contact-info">
                      <div class="research-subtitle">
                          <h2>Contact Me</h2>
                      </div>  
                      <p>Phone: 1-916-517-2382</p>
-                    <p>Address: 1155 E 60th St, Chicago, IL 60637</p>
-                    <p>Email: nlal@uchicago.edu</p>
+                    <p>Address: 3114 Tydings Hall, 7343 Preinkert Dr., College Park, MD 20742</p>
+                    <p>Email: nalal@umd.edu</p>
                 </div>
             </div>
         </div>
@@ -97,7 +97,7 @@
             image: "Attachments/power_outage_preview.jpg"
         },
         {
-            title: "Child Tax Benefits and Labor Supply",
+            title: "Work Requirements and Child Tax Benefits",
             link: "Attachments/Child Tax Benefits and Labor Supply Evidence from California.pdf",
             image: "Attachments/ctc_preview.jpg"
         },
