--- a/research.html
+++ b/research.html
@@ -40,8 +40,8 @@
                 </div>
             </div>
             <div class="paper-box">
-                <div class="paper-title">Child Tax Benefits and Labor Supply: Evidence from California</div>
-                <div class="paper-authors">(With Jacob Goldin, Tatiana Homonoff, Ithai Lurie, and Katherine Michelmore), NBER Working Paper Series. No. 32343.</div>
+                <div class="paper-title">Work Requirements and Child Tax Benefits</div>
+                <div class="paper-authors">(With Jacob Goldin, Tatiana Homonoff, Ithai Lurie, Katherine Michelmore, and Matthew Unrath), Revise and Resubmit (Review of Economics and Statistics).</div>
                 <div class="paper-buttons">
                     <a href="https://www.nber.org/papers/w32343" target="_blank">Paper</a>
                     <a href="Attachments/Child-Tax-Benefits-and-Labor-Supply.pdf" target="_blank">BFI Research Brief</a>
