--- a/about.html
+++ b/about.html
@@ -32,11 +32,10 @@
         <div class="about-content"> 
             <div class="about-text">
                  <h2>About Me</h2>
-                <p>Hello! As a Predoctoral Research Specialist at the Coase-Sandor Institute for Law and Economics at the University of Chicago, I use administrative tax data to conduct empirical research. Our current project examines the impact of child tax credits on maternal employment, utilizing a novel approach to bandwidth selection in regression discontinuity design models.</p>
-                <p>Before this role, I worked on the Labor and Employment team at NERA Economic Consulting. My work focused on corporate litigation involving allegations of monopsonistic behavior, discrimination, and employee misclassification. This experience introduced me to the unique ways labor markets deviate from theoretical models and the economic analysis required to detect such deviations.</p>
-                <p>Academically, I graduated with honors from Grinnell College in 2022, majoring with honors in Economics and Biochemistry. As an undergraduate, I was awarded the Founders’ Merit Scholarship and the Gilbert DeBartolo ’69 Memorial Prize in Economics.</p>
-                <p>Outside of research, I enjoy playing chess, golfing, and reading—I am part of two book clubs. In my free time, I also enjoy watching football and scuba diving.</p>
-                <a href="Attachments/Resume Lal.pdf" class="resume-button" download>Download My Resume</a>
+                <p>Hello!  I am a first-year PhD student in Economics at the University of Maryland. My research interests include labor economics, public economics, and the economics of crime.</p>
+                <p>Prior to graduate school, I spent two years as a Predoctoral Research Specialist at the Coase-Sandor Institute for Law and Economics at the University of Chicago, where I worked with Professor Jacob Goldin on empirical research using administrative tax data. Previously, I worked in the Labor and Employment Division of NERA Economic Consulting on litigation involving monopsonistic behavior, discrimination, and employee misclassification.</p>
+                <p>I graduated with honors from Grinnell College in 2022 with a double major in Economics and Biochemistry. Outside of research, I enjoy chess, golf, reading, basketball (Go Kings!), and scuba diving.</p>
+                <a href="Attachments/CV_Lal_Neel.pdf.pdf" class="resume-button" download>Download my CV</a>
             </div>
             <div class="about-photo">
                 <img src="Attachments/profile_photo_about_me.jpg" alt="Profile Photo">
