--- a/about.html
+++ b/about.html
@@ -35,7 +35,7 @@
                 <p>Hello!  I am a first-year PhD student in Economics at the University of Maryland. My research interests include labor economics, public economics, and the economics of crime.</p>
                 <p>Prior to graduate school, I spent two years as a Predoctoral Research Specialist at the Coase-Sandor Institute for Law and Economics at the University of Chicago, where I worked with Professor Jacob Goldin on empirical research using administrative tax data. Previously, I worked in the Labor and Employment Division of NERA Economic Consulting on litigation involving monopsonistic behavior, discrimination, and employee misclassification.</p>
                 <p>I graduated with honors from Grinnell College in 2022 with a double major in Economics and Biochemistry. Outside of research, I enjoy chess, golf, reading, basketball (Go Kings!), and scuba diving.</p>
-                <a href="Attachments/CV_Lal_Neel.pdf.pdf" class="resume-button" download>Download my CV</a>
+                <a href="Attachments/CV_Lal_Neel.pdf" class="resume-button" download>Download my CV</a>
             </div>
             <div class="about-photo">
                 <img src="Attachments/profile_photo_about_me.jpg" alt="Profile Photo">
